Finish h1 element styling, fix timer colon spacing
Take tutorial out of read me, didn't end up using its code

--- a/styles.css
+++ b/styles.css
@@ -113,12 +113,23 @@ h1 {
 
 /* Title */
 .title {
-  font-size: 3rem;
+  font-size: 6em;
   color: #fff;
-  border: 1px solid white;
-  width: 50vw;
+  width: 7em;
   height: 20%;
   display: block;
   text-align: center;
   margin: 0 auto;
+  text-shadow: 0 1px 0 #ccc,
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
 }
